--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,16 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url("friends.jpg");
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
 }
 
 /* #AD1AAF hover*/
-.container {
+.global-container {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.container1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,16 +31,22 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background: url("friends.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
 }
 
-.container .text {
+.container1 .text {
   text-align: center;
   color: white;
   position: relative;
   margin-top: 4rem;
 }
 
-.container .text .button {
+.container1 .text .button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,7 +59,7 @@ body {
   margin-top: 50px;
 }
 
-.container .text .button .submit-btn {
+.container1 .text .button .submit-btn {
   min-width: 300px;
   height: 50px;
   font-size: 18px;
@@ -63,11 +71,11 @@ body {
   transition: 1s;
 }
 
-.container .text .button .submit-btn:hover {
+.container1 .text .button .submit-btn:hover {
   background-color: crimson;
 }
 
-.container .photo img {
+.container1 .photo img {
   border-radius: 50%;
   width: 20rem;
   height: 18rem;
@@ -75,33 +83,67 @@ body {
 }
 
 @media screen and (max-width: 990px) {
-  .container {
+  .container1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .container .text {
+  .container1 .text {
     margin-top: 5em;
     text-align: justify;
     padding: 20px;
   }
-  .container .text h1 {
+  .container1 .text h1 {
     text-align: center;
   }
 }
 
 @media screen and (max-width: 990px) and (max-width: 600px) {
-  .container {
+  .container1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .container .left-column {
+  .container1 .left-column {
     margin-top: 4em;
     padding: 20px;
     text-align: justify;
   }
+}
+
+.container2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (400px)[3];
+      grid-template-columns: repeat(3, 400px);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding-top: 90px;
+  font-size: 25px;
+}
+
+.container2 .block1 img {
+  display: block;
+  margin: auto;
+  height: 5rem;
+}
+
+.container2 .block2 img {
+  display: block;
+  margin: auto;
+  height: 5rem;
+}
+
+.container2 .block3 img {
+  display: block;
+  margin: auto;
+  height: 5rem;
 }
 /*# sourceMappingURL=style.css.map */
