--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: 3px solid limegreen !important;
 }
 
 body {
@@ -17,8 +18,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  position: relative;
-  width: 100%;
   min-height: 80vh;
 }
 
@@ -39,14 +38,18 @@ body {
 }
 
 .container1 .content .text {
-  text-align: center;
+  text-align: justify;
   color: white;
-  position: relative;
   margin-top: 4rem;
   font-size: 25px;
+  margin: 0 4em;
 }
 
-.container1 .content .text .button {
+.container1 .content .text h1 {
+  text-align: center;
+}
+
+.container1 .content .button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,11 +59,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 50px;
+  margin: 50px 50px;
 }
 
-.container1 .content .text .button .submit-btn {
-  min-width: 300px;
+.container1 .content .button .submit-btn {
+  width: 300px;
   height: 50px;
   font-size: 18px;
   font-weight: 800;
@@ -71,7 +74,7 @@ body {
   transition: 1s;
 }
 
-.container1 .content .text .button .submit-btn:hover {
+.container1 .content .button .submit-btn:hover {
   background-color: crimson;
   border: 1px solid crimson;
 }
@@ -83,11 +86,35 @@ body {
   margin-top: 5em;
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 420px) {
+  .text p {
+    margin: 0 -20px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .text {
+    margin: 0;
+  }
+  .text p {
+    text-align: start;
+    width: auto;
+    font-size: 13px;
+    padding: 0 1em;
+  }
+  .button .submit-btn {
+    max-width: 200px;
+  }
+}
+
+@media screen and (max-width: 770px) {
   .text p {
     text-align: justify;
-    font-size: 15px;
-    padding: 0 25px;
+    font-size: 17px;
+    padding: 0 8px;
+  }
+  .photo-container .photo {
+    display: none;
   }
 }
 
@@ -104,48 +131,44 @@ body {
   text-align: justify;
   padding-top: 90px;
   font-size: 25px;
+  margin: 0 5em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.container2 .block1 img {
+.container2 .block img {
   display: block;
   margin: auto;
   height: 5rem;
 }
 
-.container2 .block2 img {
-  display: block;
-  margin: auto;
-  height: 5rem;
-}
-
-.container2 .block3 img {
-  display: block;
-  margin: auto;
-  height: 5rem;
-}
-
-.container2 .block1 {
+.container2 .block {
   padding: 0 25px;
 }
 
-.container2 .block1 h2 {
+.container2 .block h2 {
   text-align: center;
 }
 
-.container2 .block2 {
-  padding: 0 25px;
-}
-
-.container2 .block2 h2 {
-  text-align: center;
-}
-
-.container2 .block3 {
-  padding: 0 25px;
-}
-
-.container2 .block3 h2 {
-  text-align: center;
+@media screen and (max-width: 460px) {
+  .container2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+  .container2 p {
+    font-size: 15px;
+    margin: 0 -30px;
+    text-align: start;
+  }
+  .container2 h2 {
+    font-size: 20px;
+  }
+  .container2 .block {
+    margin-bottom: 50px;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -155,6 +178,7 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 0 2rem;
+    font-size: 19px;
   }
 }
 
@@ -172,21 +196,27 @@ body {
   padding-top: 10em;
 }
 
-@media screen and (max-width: 770px) {
+.container3 .number-section {
+  width: 100%;
+}
+
+.container3 .number-section h1 {
+  font-size: 2.5em;
+}
+
+.container3 .number-section .icon img {
+  width: 4em;
+}
+
+@media screen and (max-width: 1020px) {
   .container3 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .container3 .number-section1 {
-    padding-bottom: 5rem;
-  }
-  .container3 .number-section2 {
-    padding: 5rem 0;
-  }
-  .container3 .number-section3 {
-    padding: 5rem 0;
+  .container3 .number-section {
+    margin-bottom: 70px;
   }
 }
 
@@ -206,12 +236,11 @@ body {
 .testimonials .testimonial {
   position: relative;
   border: 1px solid black;
-  border-radius: 15px;
-  margin: 0 50px;
+  border-radius: 20px;
   text-align: center;
   background-color: purple;
-  max-width: 700px;
-  margin: 0 90px;
+  width: 700px;
+  margin: 0 50px;
 }
 
 .testimonials .testimonial p {
@@ -223,18 +252,45 @@ body {
 
 .testimonials .testimonial h1 {
   color: greenyellow;
+  margin-top: 1em;
 }
 
 .testimonials .testimonial .photo_person img {
   border-radius: 50%;
-  height: 100px;
+  height: 150px;
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: -50px;
+  margin-top: -100px;
+  margin-left: -40px;
+  border: 4px solid purple;
 }
 
-@media screen and (max-width: 1700px) {
+@media screen and (max-width: 750px) {
+  .testimonials {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: start;
+  }
+  .testimonials .testimonial {
+    width: 250px;
+  }
+  .testimonials .testimonial img {
+    max-height: 110px;
+  }
+  .testimonials .testimonial h1 {
+    margin: 3.5rem 15px 0;
+    font-size: 25px;
+  }
+  .testimonials .testimonial p {
+    padding: 1.3em;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 1750px) {
   .testimonials {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -242,9 +298,9 @@ body {
             flex-direction: column;
   }
   .testimonials .testimonial {
-    margin: 35px;
-    max-width: 600px;
-    max-height: 900px;
+    margin-bottom: 15rem;
+    max-width: 900px;
+    max-height: 1000px;
   }
   .testimonials .testimonial h1 {
     margin-top: 2rem;
