--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: 3px solid limegreen !important;
 }
 body {
     font-family: 'Poppins', sans-serif;
@@ -17,8 +18,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    position: relative;
-    width: 100%;
     min-height: 80vh;
 
     
@@ -30,20 +29,27 @@ body {
       
 
         .text {
-            text-align: center;
+            text-align: justify;
             color: white;
-            position: relative;
             margin-top: 4rem;
             font-size: 25px;
+            margin: 0 4em;
 
-            .button {
+            h1 {
+                text-align: center;
+            }
+
+          
+        }
+        
+        .button {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-top: 50px;
+                margin: 50px 50px;
                 
                 .submit-btn {
-                    min-width: 300px;
+                    width: 300px;
                     height: 50px;
                     font-size: 18px;
                     font-weight: 800;
@@ -57,10 +63,7 @@ body {
                         border: 1px solid crimson;
                     }
                 }
-            }
-            
         }
-
         .photo-container .photo {
             border-radius: 50%;
             width: 20rem;
@@ -70,14 +73,39 @@ body {
     }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 420px) {
     .text p {
-        text-align: justify;
-        font-size: 15px;
-        padding: 0 25px;
+        margin: 0 -20px;
+
+    }
+
+} 
+
+@media screen and (max-width: 510px) {
+   
+    .text  {
+        margin: 0;
+        p {
+            text-align: start;
+            width: auto;
+            font-size: 13px;
+            padding: 0 1em;
+        }
+    }
+    .button .submit-btn {
+        max-width: 200px;
     }
 }
-
+@media screen and (max-width: 770px) {
+    .text p {
+        text-align: justify;
+        font-size: 17px;
+        padding: 0 8px;
+    }
+    .photo-container .photo {
+        display: none;
+    }
+}
 
 .container2 {
     display: flex;
@@ -86,69 +114,76 @@ body {
     text-align: justify;
     padding-top: 90px;
     font-size: 25px;
-
-    .block1 img {
+    margin: 0 5em;
+    box-sizing: border-box;
+ 
+    .block img {
         display: block;
         margin: auto; 
         height: 5rem; 
-    }
-    .block2 img {
-        display: block;
-        margin: auto;  
-        height: 5rem; 
-    }
-    .block3 img {
-        display: block;
-        margin: auto; 
-        height: 5rem;  
     }
     
-    .block1 {
+    .block {
         padding: 0 25px;
         
         h2 {
             text-align: center;
         }
     }
-    .block2 {
-        padding: 0 25px;
-        h2 {
-            text-align: center;
+  
+}
+
+@media screen and (max-width: 460px) {
+    .container2 {
+        flex-direction: column;
+        height: auto;
+        p {
+            font-size: 15px;
+            margin: 0 -30px;
+            text-align: start;
         }
-    }
-    .block3 {
-        padding: 0 25px;
+
         h2 {
-            text-align: center;
+            font-size: 20px;
         }
+        .block {
+            margin-bottom: 50px;
+        }
+     
     }
 }
 @media screen and (max-width: 1200px) {
     .container2 {
         flex-direction: column;
         margin: 0 2rem;
+        font-size: 19px;
     }
-  
 }
+
 .container3 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     padding-top: 10em;
+    
+    .number-section {
+        width: 100%;
+
+        h1 {
+            font-size: 2.5em;
+        }
+        .icon img {
+            width: 4em;
+        }
+    }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 1020px) {
     .container3 {
         flex-direction: column;
-        .number-section1 {
-            padding-bottom: 5rem;
-        }
-        .number-section2 {
-            padding: 5rem 0;
-        }
-        .number-section3 {
-            padding: 5rem 0;
+        .number-section {
+            margin-bottom: 70px;
         }
     }
 }
@@ -163,12 +198,12 @@ body {
     .testimonial {
         position: relative;
         border: 1px solid black;
-        border-radius: 15px;
-        margin: 0 50px;
+        border-radius: 20px;
         text-align: center;
         background-color: purple;
-        max-width: 700px;
-        margin: 0 90px;
+        width: 700px;
+        margin: 0 50px;
+
         p {
             text-align: justify;
             color: white;
@@ -177,26 +212,55 @@ body {
         }
         h1 {
             color: greenyellow;
+            margin-top: 1em;
         }
         .photo_person img {
             border-radius: 50%;
-            height: 100px;
+            height: 150px;
             position: absolute;
             top: 0;
             left: 0;
-            margin-top: -50px;
+            margin-top: -100px;
+            margin-left: -40px;
+            border: 4px solid purple; 
         }
     }
 }
 
-@media screen and (max-width: 1700px) {
+@media screen and (max-width: 750px) {
+    .testimonials {
+        flex-direction: column;
+        text-align: start;
+        
+        .testimonial {
+            width: 250px;
+        
+            img {
+                max-height: 110px;
+            }
+
+            h1 {
+                margin: 3.5rem 15px 0;
+                font-size: 25px;
+            }
+            p {
+                padding: 1.3em;
+                font-size: 15px;
+            }
+            
+        }
+    }
+}
+
+@media screen and (max-width: 1750px) {
     .testimonials {
         flex-direction: column;
 
         .testimonial {
-            margin: 35px;
-            max-width: 600px;
-            max-height: 900px;
+            
+            margin-bottom: 15rem;
+            max-width: 900px;
+            max-height: 1000px;
             h1 {
                 margin-top: 2rem;
             }
